kubernetes/apps/forgejo-runner/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo-runner
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
